# Platform

./: .gitignore  CMakeLists.txt  README -LICENSES  a.out  game.cpp  game.hpp  global.hpp  main.cpp
assets/: assetManager.cpp  assetManager.hpp
levelState/: eventHandler.cpp  eventhandler.hpp  hero.cpp  hero.hpp  levelStateManager.cpp  levelStateManager.hpp  map.cpp  map.hpp  monster.cpp  monster.hpp  npc.cpp  npc.hpp  window.cpp  window.hpp
loads/: loadsManager.cpp  loadsManager.hpp  mainMenu.cpp  mainMenu.hpp  newGame.cpp  newGame.hpp
reads/: README -LICENSES  readme
